# DO-IT

./: .env  .gitignore  Do-IT.7z  Procfile  README.md  antworten.json  app.py  config.py  forms.py  formular.csv  formular.json  log.text  models.py  package-lock.json  package.json  pyproject.toml  requirements.txt  routes.py
static/: style.css  styles.css
templates/: base.html  beratung.html  index.html  login.html
