[tool.poetry]
name = "alex projekt"
version = "0.1.0"
description = ""
authors = ["Kevin <kmeinon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
pymongo = "3.9"
Flask-Admin = "^1.6.0"
npx = "^0.0.25"
libsass = "^0.21.0"
dnspython = "^2.2.0"
FlaskSimpleAuth = "^5.2.0"
Flask-Login = "^0.5.0"
mongoengine = "^0.23.1"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
